# zigpy

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Contributors.md  README.md  pyproject.toml  requirements_test.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish-to-pypi.yml  release-management.yml  stale.yml
.github/workflows/matchers/: codespell.json  flake8.json  python.json  ruff.json
tests/: __init__.py  async_mock.py  conftest.py  database_v3.sql  server.crt  server.key  test.py  test_app_state.py  test_appdb.py  test_appdb_migration.py  test_appdb_pysqlite.py  test_application.py  test_backups.py  test_config.py  test_datastructures.py  test_device.py  test_endpoint.py  test_group.py  test_listeners.py  test_neighbor.py  test_ota.py  test_ota_client_expiring_cache.py  test_ota_client_http_cache.py  test_ota_firmware.py  test_ota_image.py  test_ota_provider.py  test_ota_validators.py  test_quirks.py  test_quirks_registry.py  test_quirks_v2.py  test_serial.py  test_struct.py  test_topology.py  test_types.py  test_zcl.py  test_zcl_clusters.py  test_zcl_foundation.py  test_zdo.py  test_zdo_types.py  test_zigbee_util.py
tests/databases/: bad_attrs_v3.db  simple_v3.sql  simple_v3_to_v4.sql  simple_v5.sql  simple_v8.sql  zigbee_20190417_v0.db
tests/ota/: test_ota_config.py  test_ota_image.py  test_ota_manager.py  test_ota_matching.py  test_ota_metadata.py  test_ota_providers.py  test_ota_validators.py
tests/ota/files/: ikea_version_info.json  ikea_version_info_old.json  ikea_version_info_old_test.json  inovelli_firmware-zha.json  ledvance_firmwares.json  local_index.json  remote_index.json  salus_firmware.json  sonoff_upgrade.json  thirdreality_firmware.json  z2m_index.json
tests/ota/files/ikea/: mgm210l-light-cws-cv-rgbw_release_prod_v268572245_3ae78af7-14fd-44df-bca2-6d366f2e9d02.ota
tests/ota/files/local_provider/: 1135-0000-201000A0-FLS-PP3_RGBW.zigbee  RDL2016091_1_E11-G13_V0.0.9_20170921_release.ota
tests/ota_providers/: test_ota_provider_inovelli.py  test_ota_provider_ledvance.py  test_ota_provider_remote.py  test_ota_provider_salus.py  test_ota_provider_sonoff.py  test_ota_provider_thirdreality.py
zigpy/: __init__.py  appdb.py  application.py  backup.py  backups.py  config.py  const.py  datastructures.py  device.py  endpoint.py  exceptions.py  greenpower.py  group.py  listeners.py  models.py  neighbor.py  ota.py  serial.py  state.py  toplogy.py  topology.py  typing.py  util.py
zigpy/appdb_schemas/: __init__.py  schema_v0.sql  schema_v1.sql  schema_v10.sql  schema_v11.sql  schema_v12.sql  schema_v13.sql  schema_v14.sql  schema_v2.sql  schema_v3.sql  schema_v4.sql  schema_v5.sql  schema_v6.sql  schema_v7.sql  schema_v8.sql  schema_v9.sql
zigpy/application/: __init__.py  state.py
zigpy/config/: __init__.py  defaults.py  validators.py
zigpy/docs/: zigpy_api.md
zigpy/ota/: OTA_URLs.md  __init__.py  cached_client.py  firmware.py  image.py  json_schemas.py  manager.py  provider.py  providers.py  validators.py
zigpy/profiles/: __init__.py  zgp.py  zha.py  zll.py
zigpy/quirks/: __init__.py  registry.py
zigpy/quirks/greenpower/: __init__.py  ptm125ze.py  ptm215z.py  ptm215ze.py  sws200.py  tuya_selfpowered.py
zigpy/quirks/ikea/: __init__.py
zigpy/quirks/keen/: __init__.py
zigpy/quirks/kof/: __init__.py
zigpy/quirks/smartthings/: __init__.py
zigpy/quirks/v2/: __init__.py
zigpy/quirks/v2/homeassistant/: __init__.py  binary_sensor.py  number.py  sensor.py
zigpy/quirks/xiaomi/: __init__.py
zigpy/types/: __init__.py  basic.py  greenpower.py  named.py  struct.py
zigpy/zcl/: __init__.py  foundation.py
zigpy/zcl/clusters/: __init__.py  closures.py  concentration_measurement.py  general.py  general_const.py  greenpower.py  homeautomation.py  hvac.py  lighting.py  lightlink.py  manufacturer_specific.py  measurement.py  p  protocol.py  security.py  smartenergy.py  touchlink.py
zigpy/zdo/: __init__.py  types.py
zigpy/zgp/: __init__.py  commands.py  device.py  devices.py  ext_data.py  foundation.py  message_concentrator.py  security.py  types.py
